Fix: Add overflow hidden to title-line-blue to prevent image showing before hover

--- a/src/app/shared/design/titles/title-line-blue/title-line-blue.scss
+++ b/src/app/shared/design/titles/title-line-blue/title-line-blue.scss
@@ -21,6 +21,7 @@
             top: 68px;
             left: var(--img-wrap-offset);
             width: 0;
+            overflow: hidden;
             transition: width 0.2s ease-in;
 
             img {
